--- a/css/base.css
+++ b/css/base.css
@@ -2,6 +2,7 @@
 :root {
   --primary-color: #5A6D92;
   --secondary-color: #D7A860;
+  --secundary-color-light:rgb(218, 219, 255);
   --text-color: #1f2937;
   --background-color: #F5F8FC;
   --white: #ffffff;
@@ -25,8 +26,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0rem 1.5rem;
-  background-color: var(--background-color);
+  padding: 5px 1.5rem;
+  background-color: var(--white);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
   position: fixed;
