--- a/css/results.css
+++ b/css/results.css
@@ -4,6 +4,7 @@
   padding-top: 100px;
   padding-bottom: 2rem;
   background-color: var(--background-color);
+  background: linear-gradient(to bottom, var(--secundary-color-light), var(--primary-color));
 }
 
 .results-container {
@@ -26,6 +27,8 @@
   background-color: var(--background-color);
   border-radius: 8px;
   margin-bottom: 1rem;
+  position: relative;
+  overflow: hidden;
 }
 
 .student-profile {
